---------------------------------------------------------------------------------------------------
Version: 0.69.12
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.11
Date: 2025-07-11
  Changes:
    - Fixed incompatibility with "Everything has Quality"
---------------------------------------------------------------------------------------------------
Version: 0.69.10
Date: 2025-07-08
  Changes:
    - Fixed a crash from installing a mod that uses this library, then uninstalling that mod, while also having a third mod that nukes everything else at the start.
---------------------------------------------------------------------------------------------------
Version: 0.69.9
Date: 2025-07-06
  Changes:
    - Fixed crash from too many entities in localized strings.
    - Added compatibility for Factory levels mod.
---------------------------------------------------------------------------------------------------
Version: 0.69.8
Date: 2025-07-04
  Changes:
    - Bugfix with autosearching machines by crafting category.
---------------------------------------------------------------------------------------------------
Version: 0.69.7
Date: 2025-06-22
  Changes:
    - Fixed incompatibility with beacon-rebalance. This may cause issues with multiplayer. Please report them if you find any. In order to fix it, wretlaw would need to modify his interface to store his whitelist in storage, not local. This way I can whitelist in init/on_config_changed (which will then avoid desyncs).
    - Incompatible with Delta Beacon Rebalance, as I have no way to whitelist my beacons from it.
    - Fixed bug that kept making multiple beacons on an entity.
---------------------------------------------------------------------------------------------------
Version: 0.69.6
Date: 2025-06-21
  Changes:
    - Fixed bug where inserters could get stuck targetting the invisible beacons.